overflow horizontal scroll fix

--- a/prototype/style.css
+++ b/prototype/style.css
@@ -7,6 +7,7 @@ html {
 body {
   max-width: 1000px;
   position: relative;
+  overflow-x: hidden;
   margin: 0;
   padding-bottom: 6rem;
   min-height: 100%;
